Fix wrapper on header, alignment on main and solve media queries on footer

--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,45 +1,51 @@
 .footer {
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-  height: 465px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  position: relative;
   background-color: $color-dark;
   font-family: $mainText;
   font-weight: $fontWeight-regular;
   line-height: 2 * $standard-px;
   &__anchor {
     @include icon {
-      position: relative;
-      top: -22px;
+      position: absolute;
+      top: 0;
+      left: 50%;
+      transform: translate(-50%, -50%);
     }
     &--link {
       margin-top: 8px;
     }
   }
-  & .pageContainer {
+  & .wrapper {
     display: flex;
-    flex-direction: column;
+    flex-direction: column-reverse;
     align-items: center;
     text-align: center;
+    padding: 4 * $standard-px 0 3 * $standard-px;
+    @include tablet {
+      padding: 3 * $standard-px 0;
+      flex-direction: row;
+      text-align: left;
+      align-items: flex-start;
+      justify-content: space-between;
+    }
+    @include desktop {
+      margin: 0 370px;
+    }
   }
   &__copyright {
     color: $color-light;
+    font-size: $fontSize-xSmall;
     margin-top: 2 * $standard-px;
-    width: 210px;
     &--brand {
       display: block;
     }
+    & .fas.fa-heart {
+      color: $color-secondary;
+    }
   }
-  .sections {
-    margin-top: 2 * $standard-px;
-    width: 210px;
-  }
+  .sections,
   .social {
     margin-top: 2 * $standard-px;
-    width: 210px;
   }
   &__links {
     list-style-type: none;
@@ -48,17 +54,7 @@
       color: $color-light;
       text-transform: uppercase;
       text-decoration: none;
-    }
-  }
-  & .fas.fa-heart {
-    color: $color-secondary;
-  }
-  @include tablet {
-    & .pageContainer {
-      flex-direction: row;
-      text-align: left;
-      justify-content: space-between;
-      width: 100%;
+      font-size: $fontSize-small;
     }
   }
 }
