--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -1,6 +1,7 @@
 .main {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
   &__featured {
     margin: 2 * $standard-px 0 3 * $standard-px; /*30px 0 45px*/
     line-height: 2 * $standard-px;
